chore: update gitignore
application.yml에 비밀번호가 저장되지 않도록 local, dev 분리
docker 변수 제외

--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,10 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,java,intellij+all,gradle,visualstudiocode
+
+# application.yml 설정 관리
+application-local.yml
+application-dev.yml
+
+# docker
+.env
