--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
     testRuntimeOnly 'com.h2database:h2'
+
+    // Querydsl (런타임에서 Querydsl 사용)
+    implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
+
+    // Q타입 생성용(컴파일 타임 Annotation Processor)
+    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
+
+    // (자주 필요한 보강) javax/jakarta 관련 Generated 어노테이션 이슈 예방
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
