chore: Querydsl가 Intellij IDE 환경에서 발생하는 오류 해결

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,16 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
+def querydslDir = layout.buildDirectory.dir("generated/sources/annotationProcessor/java/main").get().asFile
+
+sourceSets {
+    main.java.srcDir querydslDir
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.generatedSourceOutputDirectory = file(querydslDir)
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
