--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,12 @@
 /gradlew text eol=lf
 *.bat text eol=crlf
 *.jar binary
+
+# Normalize common text files to LF across environments.
+*.java text eol=lf
+*.gradle text eol=lf
+*.properties text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.md text eol=lf
+*.http text eol=lf
