chore: health 엔드포인트 기본 설정, 내부 정보 공개 제한

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,12 @@ spring:
     name: click-checker
   profiles:
     active: local
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: never
