--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,5 +41,31 @@ services:
       retries: 10
       start_period: 10s
 
+  prometheus:
+    image: prom/prometheus:v2.55.1
+    container_name: click-checker-prometheus
+    restart: unless-stopped
+    depends_on:
+      app:
+        condition: service_healthy
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+
+  grafana:
+    image: grafana/grafana:11.2.2
+    container_name: click-checker-grafana
+    restart: unless-stopped
+    depends_on:
+      - prometheus
+    ports:
+      - "3000:3000"
+    volumes:
+      - click-checker-grafana-data:/var/lib/grafana
+
 volumes:
   click-checker-pg-data:
+  click-checker-grafana-data:
