chore(log): 로그 레벨 최소화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     name: click-checker
   profiles:
     active: local
+  mvc:
+    log-request-details: false
 
 management:
   endpoints:
@@ -12,3 +14,7 @@ management:
   endpoint:
     health:
       show-details: never
+
+logging:
+  level:
+    root: info
