--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 
+    // Sentry
+    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.22.0'
+
     testRuntimeOnly 'com.h2database:h2'
 
     // Querydsl (런타임에서 Querydsl 사용)
