--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,20 @@ jobs:
         run: ./gradlew test
         env:
           SPRING_PROFILES_ACTIVE: ci
+
+  postgres-compat:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
+          cache: gradle
+
+      - name: Run PostgreSQL compatibility test
+        run: ./gradlew test --tests com.clickchecker.event.controller.EventQueryControllerPostgresIntegrationTest
